--- a/P1WebAppRazor/P1WebAppRazor.csproj
+++ b/P1WebAppRazor/P1WebAppRazor.csproj
@@ -8,10 +8,10 @@
 
   <ItemGroup>
     <Folder Include="Data/" />
-    <Folder Include="Models/" />
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="BCrypt.Net-Next" Version="4.0.3" />
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="9.0.1" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="9.0.1" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="9.0.1">
