--- a/P1WebAppRazor/P1WebAppRazor.csproj
+++ b/P1WebAppRazor/P1WebAppRazor.csproj
@@ -8,6 +8,8 @@
 
   <ItemGroup>
     <Folder Include="Data/" />
+    <Folder Include="Interfaces/" />
+    <Folder Include="Services/" />
   </ItemGroup>
 
   <ItemGroup>
@@ -18,6 +20,7 @@
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
       <PrivateAssets>all</PrivateAssets>
     </PackageReference>
+    <PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="8.3.1" />
   </ItemGroup>
 
 </Project>
