--- a/P1WebAppRazor/P1WebAppRazor.csproj
+++ b/P1WebAppRazor/P1WebAppRazor.csproj
@@ -9,6 +9,7 @@
   <ItemGroup>
     <Folder Include="Data/" />
     <Folder Include="Interfaces/" />
+    <Folder Include="Models/ViewModels/" />
     <Folder Include="Services/" />
   </ItemGroup>
 
